--- a/src/lib/i18n/dictionaries/en.json
+++ b/src/lib/i18n/dictionaries/en.json
@@ -130,17 +130,17 @@
   "beehive.hives.plural": "hives",
   "birdieplaza.birdieIntro": "Hey there, I'm Birdie, the most beautiful Bumpkin around!",
   "birdieplaza.admiringOutfit": "I noticed you admiring my outfit. Isn't it fantastic?!?",
-  "birdieplaza.currentSeason": "We are currently in {{currentSeason}} Chapter and Bumpkins are going crazy for {{seasonalTicket}}s.",
-  "birdieplaza.collectTickets": "Collect enough {{seasonalTicket}}s and you can craft rare NFTs. That's how I got this rare outfit!",
+  "birdieplaza.currentSeason": "We are currently in {{currentSeason}} Chapter and Bumpkins are going crazy for {{chapterTicket}}s.",
+  "birdieplaza.collectTickets": "Collect enough {{chapterTicket}}s and you can craft rare NFTs. That's how I got this rare outfit!",
   "birdieplaza.whatIsSeason": "What is a season?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}s?",
-  "birdieplaza.earnTicketsVariety": "You can earn {{seasonalTicket}} in a variety of ways.",
-  "birdieplaza.commonMethod": "The most common method to earn {{seasonalTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
-  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
-  "birdieplaza.gatherAndCraft": "Gather enough {{seasonalTicket}}s and you will be able to buy some rare items like I did.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}s?",
+  "birdieplaza.earnTicketsVariety": "You can earn {{chapterTicket}} in a variety of ways.",
+  "birdieplaza.commonMethod": "The most common method to earn {{chapterTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
+  "birdieplaza.choresAndRewards": "You can also earn {{chapterTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
+  "birdieplaza.gatherAndCraft": "Gather enough {{chapterTicket}}s and you will be able to buy some rare items like I did.",
   "birdieplaza.newSeasonIntro": "Every 3 months a new season is introduced at Sunflower Land.",
   "birdieplaza.seasonQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
-  "birdieplaza.craftItems": "To obtain these rare items, you must collect {{seasonalTicket}}s and exchange them at Stella's Megastore or bid at the Auction House.",
+  "birdieplaza.craftItems": "To obtain these rare items, you must collect {{chapterTicket}}s and exchange them at Stella's Megastore or bid at the Auction House.",
   "description.speed.chicken.one": "Your chickens will now produce eggs 10% faster.",
   "description.speed.chicken.two": "Produces eggs 10% faster.",
   "description.fat.chicken.one": "Your chickens will now require 10% less food each time they are fed.",
@@ -2219,7 +2219,7 @@
   "harvestflower.notReady": "Flower is not ready to harvest",
   "harvestflower.alr.plant": "Flower is already planted",
   "hayseedHankv2.dialog1": "Well, howdy there, young whippersnappers! I'm Hayseed Hank, a seasoned ol' Bumpkin farmer, tending to the land like in the good ol' days.",
-  "hayseedHankv2.dialog2": "However, my bones ain't what they used to be. If you can help me with my daily chores, I will reward you with {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "However, my bones ain't what they used to be. If you can help me with my daily chores, I will reward you with {{chapterTicket}}.",
   "hayseedHankv2.action": "Let's do it",
   "hayseedHankv2.title": "Hank's Daily Chores",
   "hayseedHankv2.newChoresAvailable": "New chores: {{timeLeft}}",
@@ -2874,7 +2874,7 @@
   "npcDialogues.bert.intro2": "Ah, kindred spirit! Sunflorea is home to countless treasures...",
   "npcDialogues.bert.intro3": "Greetings, bearer of the mysterious! In Sunflorea, some items demand Delivery...",
   "npcDialogues.bert.intro4": "Hello, seeker of the concealed! Sunflorea's enchantments can be categorized into two...",
-  "bert.day": "You cannot withdraw this item for 3 days after claiming {{seasonalTicket}}s.",
+  "bert.day": "You cannot withdraw this item for 3 days after claiming {{chapterTicket}}s.",
   "npcDialogues.bert.positiveDelivery1": "Incredible! You've brought me everything I need...",
   "npcDialogues.bert.positiveDelivery2": "Oh, fascinating find! You have brought me the exact items I sought...",
   "npcDialogues.bert.positiveDelivery3": "Ah, about time! You've acquired the exact items I sought. Excellent!",
@@ -3096,12 +3096,12 @@
   "plaza.magicButton.query": "A magical button has appeared in the plaza. Do you want to press it?",
   "nyonStatue.memory": "In memory of",
   "nyonStatue.description": "The legendary knight responsible for clearing the goblins from the mines. Shortly after his victory he died by poisoning from a Goblin conspirator. The Sunflower Citizens erected this statue with his armor to commemorate his conquests.",
-  "obsessionDialogue.line1": "Ah, the {{itemName}}! I only wish to see it, not possess. Show it to me, and {{seasonalTicket}}s will be your reward.",
-  "obsessionDialogue.line2": "You've brought the {{itemName}}? I merely want to gaze upon it. Let me see, and {{seasonalTicket}}s shall be yours.",
-  "obsessionDialogue.line3": "Is that the {{itemName}} you have? A mere glance is all I desire. For this, you'll receive {{seasonalTicket}}s.",
-  "obsessionDialogue.line4": "The {{itemName}}! I don't want to keep it, just to behold it. Show it to me, and {{seasonalTicket}}s are yours.",
-  "obsessionDialogue.line5": "You offer a view of the {{itemName}}? All I ask is to see it briefly. For your generosity, {{seasonalTicket}}s will be granted to you.",
-  "obsessionDialogue.codex": "Is that the {{itemName}} you have? Travel to the plaza to find Bert and show it to him, and he will give you {{seasonalTicket}}s in return.",
+  "obsessionDialogue.line1": "Ah, the {{itemName}}! I only wish to see it, not possess. Show it to me, and {{chapterTicket}}s will be your reward.",
+  "obsessionDialogue.line2": "You've brought the {{itemName}}? I merely want to gaze upon it. Let me see, and {{chapterTicket}}s shall be yours.",
+  "obsessionDialogue.line3": "Is that the {{itemName}} you have? A mere glance is all I desire. For this, you'll receive {{chapterTicket}}s.",
+  "obsessionDialogue.line4": "The {{itemName}}! I don't want to keep it, just to behold it. Show it to me, and {{chapterTicket}}s are yours.",
+  "obsessionDialogue.line5": "You offer a view of the {{itemName}}? All I ask is to see it briefly. For your generosity, {{chapterTicket}}s will be granted to you.",
+  "obsessionDialogue.codex": "Is that the {{itemName}} you have? Travel to the plaza to find Bert and show it to him, and he will give you {{chapterTicket}}s in return.",
   "offer.okxOffer": "Howdy Farmer, I have an exclusive OKX offer for you!",
   "offer.beginWithNFT": "To begin you will need to mint a free Farm NFT. This will include:",
   "offer.getStarterPack": "Get Starter Pack Now",
@@ -3984,7 +3984,7 @@
   "bounties.board": "Bounty board",
   "bounties.board.info": "Trade this week's bounties before time runs out.",
   "bounties.board.travel": "Travel to the plaza and find Poppy to fulfill these bounties",
-  "bounties.board.ticketAmount": "The amount of {{seasonalTicket}}s will vary each week based on the requests.",
+  "bounties.board.ticketAmount": "The amount of {{chapterTicket}}s will vary each week based on the requests.",
   "bounties.board.empty": "There are no deals available right now.",
   "bounties.sold": "Sold",
   "bounties.sell.coins": "Are you sure you want to sell this for {{amount}} coins?",
@@ -4170,7 +4170,7 @@
   "skillCategory.reachIsland": "Reach {{island}} island to unlock",
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
-  "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
+  "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{chapterTicket}}s.",
   "chores.lockedChore": "Lvl {{level}}",
   "chores.completed": "Completed",
   "chores.complete": "Complete",
