--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -122,11 +122,11 @@
   "beehive.hives.plural": "colmenas",
   "birdieplaza.birdieIntro": "Hola, soy Birdie, el Bumpkin más hermoso del mundo!",
   "birdieplaza.admiringOutfit": "Me di cuenta de que admirabas mi atuendo. ¿No es fantástico?!?",
-  "birdieplaza.collectTickets": "Reúne suficientes {{seasonalTicket}} s y podrás crear NFT raros. Así es como conseguí este atuendo tan raro!",
+  "birdieplaza.collectTickets": "Reúne suficientes {{chapterTicket}} s y podrás crear NFT raros. Así es como conseguí este atuendo tan raro!",
   "birdieplaza.whatIsSeason": "¿Qué es una temporada?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}?",
-  "birdieplaza.earnTicketsVariety": "Puedes ganar {{seasonalTicket}} de varias maneras.",
-  "birdieplaza.gatherAndCraft": "Reúne suficientes {{seasonalTicket}} y podrás comprar algunos objetos raros como hice yo.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}?",
+  "birdieplaza.earnTicketsVariety": "Puedes ganar {{chapterTicket}} de varias maneras.",
+  "birdieplaza.gatherAndCraft": "Reúne suficientes {{chapterTicket}} y podrás comprar algunos objetos raros como hice yo.",
   "birdieplaza.newSeasonIntro": "Cada 3 meses se introduce una nueva temporada en Sunflower Land.",
   "description.speed.chicken.one": "Tus pollos ahora producirán huevos un 10% más rápido.",
   "description.banana.chicken": "Un pollo que aumenta las bananas. ¿En qué mundo vivimos?",
@@ -1884,7 +1884,7 @@
   "harvestflower.notReady": "La flor no está lista para cosechar",
   "harvestflower.alr.plant": "La flor ya está plantada",
   "hayseedHankv2.dialog1": "Bueno, qué tal, jovencitos mocosos! Soy Hayseed Hank, un granjero experimentado que cuida la tierra como en los viejos tiempos.",
-  "hayseedHankv2.dialog2": "Sin embargo, mis huesos ya no son lo que eran. Si puedes ayudarme con mis tareas diarias, te recompensaré con {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Sin embargo, mis huesos ya no son lo que eran. Si puedes ayudarme con mis tareas diarias, te recompensaré con {{chapterTicket}}.",
   "hayseedHankv2.action": "Vamos a hacerlo",
   "hayseedHankv2.title": "Las tareas diarias de Hank",
   "hayseedHankv2.newChoresAvailable": "Nuevas tareas: {{timeLeft}}",
@@ -2451,7 +2451,7 @@
   "npcDialogues.bert.intro2": "Ah, alma gemela! Sunflorea alberga innumerables tesoros...",
   "npcDialogues.bert.intro3": "Saludos, portador de lo misterioso! En Sunflorea, algunos artículos exigen entrega...",
   "npcDialogues.bert.intro4": "Hola, buscador de lo oculto! Los encantamientos de Sunflorea se pueden clasificar en dos...",
-  "bert.day": "No puedes retirar este artículo durante 3 días después de haber reclamado {{seasonalTicket}} s.",
+  "bert.day": "No puedes retirar este artículo durante 3 días después de haber reclamado {{chapterTicket}} s.",
   "npcDialogues.bert.positiveDelivery1": "Increíble! Me has traído todo lo que necesito...",
   "npcDialogues.bert.positiveDelivery2": "Oh, fascinante hallazgo! Me has traído exactamente lo que buscaba...",
   "npcDialogues.bert.positiveDelivery3": "Ah, ya era hora! Has adquirido exactamente los objetos que buscaba. Excelente!",
@@ -2673,10 +2673,10 @@
   "plaza.magicButton.query": "Ha aparecido un botón mágico en la plaza. ¿Quieres presionarlo?",
   "nyonStatue.memory": "En memoria de",
   "nyonStatue.description": "El legendario caballero responsable de sacar a los duendes de las minas. Poco después de su victoria, murió envenenado por un conspirador goblin. Los Sunflower Citizens erigieron esta estatua con su armadura para conmemorar sus conquistas.",
-  "obsessionDialogue.line1": "Ah, el {{itemName}}! Solo deseo verlo, no poseerlo. Muéstramelo y {{seasonalTicket}} s será tu recompensa.",
-  "obsessionDialogue.line2": "¿Has traído el {{itemName}}? Solo quiero contemplarlo. Déjame ver, y {{seasonalTicket}} s será tuyo.",
-  "obsessionDialogue.line4": "El {{itemName}}! No quiero quedármelo, solo contemplarlo. Muéstramelo y los {{seasonalTicket}} serán tuyos.",
-  "obsessionDialogue.line5": "¿Ofrecéis una vista del {{itemName}}? Todo lo que pido es que lo veas brevemente. Por su generosidad, se le concederán {{seasonalTicket}} s.",
+  "obsessionDialogue.line1": "Ah, el {{itemName}}! Solo deseo verlo, no poseerlo. Muéstramelo y {{chapterTicket}} s será tu recompensa.",
+  "obsessionDialogue.line2": "¿Has traído el {{itemName}}? Solo quiero contemplarlo. Déjame ver, y {{chapterTicket}} s será tuyo.",
+  "obsessionDialogue.line4": "El {{itemName}}! No quiero quedármelo, solo contemplarlo. Muéstramelo y los {{chapterTicket}} serán tuyos.",
+  "obsessionDialogue.line5": "¿Ofrecéis una vista del {{itemName}}? Todo lo que pido es que lo veas brevemente. Por su generosidad, se le concederán {{chapterTicket}} s.",
   "offer.okxOffer": "Hola Farmer, tengo una oferta OKX exclusiva para ti!",
   "offer.beginWithNFT": "Para empezar, necesitarás crear un Farm NFT gratuito. Esto incluirá:",
   "offer.getStarterPack": "Obtenga el paquete de inicio ahora",
@@ -3492,9 +3492,9 @@
   "gems.update": "Actualización de gemas",
   "gems.intro": "Para prepararnos para la incorporación de nuevos jugadores, hemos sustituido los Block Bucks por una nueva moneda: ¡gemas!",
   "gems.intro.two": "Recibirás 20 gemas por cada Block Buck que poseas.",
-  "birdieplaza.commonMethod": "El método más común para ganar {{seasonalTicket}} s es reunir recursos o recoger otros objetos solicitados y, a continuación, entregarlos a Bumpkins in the Plaza y a otras áreas.",
+  "birdieplaza.commonMethod": "El método más común para ganar {{chapterTicket}} s es reunir recursos o recoger otros objetos solicitados y, a continuación, entregarlos a Bumpkins in the Plaza y a otras áreas.",
   "birdieplaza.seasonQuests": "Esta temporada tiene misiones emocionantes, objetos coleccionables raros y artículos portátiles exclusivos que puedes conseguir.",
-  "birdieplaza.craftItems": "Para obtener estos objetos raros, debes recolectar {{seasonalTicket}} s e intercambiarlos en la Megastore de Stella o pujar en la Casa de Subastas.",
+  "birdieplaza.craftItems": "Para obtener estos objetos raros, debes recolectar {{chapterTicket}} s e intercambiarlos en la Megastore de Stella o pujar en la Casa de Subastas.",
   "reward.streak.oneYear": "Recompensa de racha de 365 días",
   "season.codex.nextDrop.available": "{{dropSupply}} disponible",
   "description.hoot.boost": "+0.5 Trigo, rábano, col rizada, arroz, cebada",
@@ -3547,7 +3547,7 @@
   "description.chicken": "Una fuente confiable de huevos frescos y plumas suaves, este pollo hace su parte felizmente con el cuidado adecuado.",
   "description.cow": "Esta amable vaca proporciona leche fresca y cuero duradero. Manténgalo feliz con abundante comida y afecto.",
   "description.sheep": "Esta esponjosa oveja proporciona tanto lana normal como lana merino lujosa. ¡Manténgalo feliz para obtener los mejores resultados!",
-  "obsessionDialogue.line3": "¿Es ese el {{itemName}} que tienes? Lo único que deseo es una simple mirada. Por ello, recibirás {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "¿Es ese el {{itemName}} que tienes? Lo único que deseo es una simple mirada. Por ello, recibirás {{chapterTicket}} s.",
   "competition.maybeLater": "Quizá más tarde",
   "world.lvl.requirement": "Nivel {{lvl}}",
   "world.factionMembersOnly": "Solo miembros de facciones",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "Los palomitas no valoran el clavel amarillo.",
   "noBumpkin.bumpkinHelp": "Necesitas un Bumpkin que te ayude a plantar, cosechar, cortar, extraer y expandir tu tierra. ¡Pronto habrá soporte para añadir un Bumpkin!",
   "chores.weeklyChores": "Tareas semanales",
-  "chores.completeChoresToEarn": "Completa tareas para Bumpkins y gana {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Completa tareas para Bumpkins y gana {{chapterTicket}} s.",
   "chores.lockedChore": "Nivel {{level}}",
   "chores.completed": "Completado",
   "chores.complete": "Completa",
@@ -3805,7 +3805,7 @@
   "description.brush": "Cepillo para animales. Utilízalo para mostrar afecto a tus animales.",
   "description.music.box": "Toca música para los animales. Utilízala para mostrar afecto a tus animales.",
   "levelUpMax": "¡Nivel máximo!",
-  "birdieplaza.choresAndRewards": "¡También puedes ganar {{seasonalTicket}} s con las tareas semanales, las recompensas diarias de los cofres, la extraña obsesión de Bert y el sistema de recompensas!",
+  "birdieplaza.choresAndRewards": "¡También puedes ganar {{chapterTicket}} s con las tareas semanales, las recompensas diarias de los cofres, la extraña obsesión de Bert y el sistema de recompensas!",
   "description.community.coin": "(WIP) Una moneda valiosa reservada para uso futuro en Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "En cada cama única puede dormir un peón de granja.",
   "bedsMigration.bedsNeededDescription3": "¡Coloca camas para contratar más peones!",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "Artículo vendido",
   "marketplace.congratulationsItemSold": "¡Enhorabuena, tu artículo se ha vendido!",
   "withdraw.taxFree": "Los duendes te cobran impuestos por el SFL ganado en el juego. Esto excluye los depósitos y el mercado.",
-  "bounties.board.ticketAmount": "La cantidad de {{seasonalTicket}} variará cada semana en función de las solicitudes.",
+  "bounties.board.ticketAmount": "La cantidad de {{chapterTicket}} variará cada semana en función de las solicitudes.",
   "marketplace.listing.cancelling": "Cancelación del anuncio",
   "marketplace.listing.cancelling.success": "¡Enhorabuena, has cancelado correctamente tu anuncio!",
   "marketplace.listing.cancelling.failure": "Vaya, algo salió mal. Por favor, inténtelo de nuevo.",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} compras diarias restantes",
   "remaining.free.purchase": "Queda 1 compra diaria",
   "statements.potionRule.four": "Cuando se complete el juego, la puntuación de tu último intento determinará tu recompensa.",
-  "obsessionDialogue.codex": "¿Es ese el {{itemName}} que tienes? Ve a la plaza para encontrar a Bert y muéstraselo, y él te dará {{seasonalTicket}} s a cambio.",
+  "obsessionDialogue.codex": "¿Es ese el {{itemName}} que tienes? Ve a la plaza para encontrar a Bert y muéstraselo, y él te dará {{chapterTicket}} s a cambio.",
   "bounties.board.travel": "Viaja a la plaza y encuentra a Poppy para conseguir estas recompensas",
   "description.trade.points": "Se obtiene al intercambiar objetos coleccionables y portátiles en el mercado. Se pueden canjear por recompensas del juego.",
   "reward.collectible": "Un objeto coleccionable para tu granja",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "¡Visita la tienda meteorológica de la plaza para proteger tu granja!",
   "beds": "Camas",
   "weatherItems": "Artículos meteorológicos",
-  "birdieplaza.currentSeason": "Actualmente estamos en el capítulo {{currentSeason}} y Bumpkins se está volviendo loco por {{seasonalTicket}} s.",
+  "birdieplaza.currentSeason": "Actualmente estamos en el capítulo {{currentSeason}} y Bumpkins se está volviendo loco por {{chapterTicket}} s.",
   "description.catch.the.kraken.banner": "¡El Kraken está aquí! La marca de un participante en el capítulo Atrapa al Kraken.",
   "description.solar.flare.ticket": "(LEGACY) Un billete utilizado durante el capítulo de Solar Flare",
   "description.dawn.breaker.ticket": "(LEGACY) Un billete usado durante el capítulo de Dawn Breaker",
