--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -121,11 +121,11 @@
   "beehive.hives.plural": "orticaria",
   "birdieplaza.birdieIntro": "Ehi, sono Birdie, la Bumpkin più bella in circolazione!",
   "birdieplaza.admiringOutfit": "Ho notato che ammiravi il mio abbigliamento. Non è fantastico?!?",
-  "birdieplaza.collectTickets": "Raccogli abbastanza {{seasonalTicket}} e puoi creare NFT rari. È così che mi sono procurato questo abito raro!",
+  "birdieplaza.collectTickets": "Raccogli abbastanza {{chapterTicket}} e puoi creare NFT rari. È così che mi sono procurato questo abito raro!",
   "birdieplaza.whatIsSeason": "Cos'è una stagione?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Puoi guadagnare {{seasonalTicket}} in diversi modi.",
-  "birdieplaza.gatherAndCraft": "Raccogli abbastanza {{seasonalTicket}} e potrai acquistare alcuni oggetti rari come ho fatto io.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Puoi guadagnare {{chapterTicket}} in diversi modi.",
+  "birdieplaza.gatherAndCraft": "Raccogli abbastanza {{chapterTicket}} e potrai acquistare alcuni oggetti rari come ho fatto io.",
   "birdieplaza.newSeasonIntro": "Ogni 3 mesi viene introdotta una nuova stagione a Sunflower Land.",
   "description.speed.chicken.one": "Le tue galline ora produrranno uova il 10% più velocemente.",
   "description.banana.chicken": "Un pollo che fa crescere le banane. In che mondo viviamo.",
@@ -1882,7 +1882,7 @@
   "harvestflower.notReady": "Il fiore non è pronto per la raccolta",
   "harvestflower.alr.plant": "Il fiore è già piantato",
   "hayseedHankv2.dialog1": "Bene, salve, giovani whippersnappers! Sono Hayseed Hank, un vecchio agricoltore esperto che coltiva la terra come ai vecchi tempi.",
-  "hayseedHankv2.dialog2": "Tuttavia, le mie ossa non sono più quelle di una volta. Se puoi aiutarmi con le mie faccende quotidiane, ti ricompenserò con {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Tuttavia, le mie ossa non sono più quelle di una volta. Se puoi aiutarmi con le mie faccende quotidiane, ti ricompenserò con {{chapterTicket}}.",
   "hayseedHankv2.action": "Facciamolo",
   "hayseedHankv2.title": "Le faccende quotidiane di Hank",
   "hayseedHankv2.newChoresAvailable": "Nuove faccende: {{timeLeft}}",
@@ -2449,7 +2449,7 @@
   "npcDialogues.bert.intro2": "Ah, spirito affine! Sunflorea custodisce innumerevoli tesori...",
   "npcDialogues.bert.intro3": "Saluti, portatore del misterioso! In Sunflorea, alcuni articoli richiedono la consegna...",
   "npcDialogues.bert.intro4": "Salve, cercatore del nascosto! Gli incantesimi di Sunflorea possono essere suddivisi in due...",
-  "bert.day": "Non puoi ritirare questo articolo per 3 giorni dopo aver richiesto {{seasonalTicket}} s.",
+  "bert.day": "Non puoi ritirare questo articolo per 3 giorni dopo aver richiesto {{chapterTicket}} s.",
   "npcDialogues.bert.positiveDelivery1": "Incredibile! Mi hai portato tutto ciò di cui ho bisogno...",
   "npcDialogues.bert.positiveDelivery2": "Oh, scoperta affascinante! Mi hai portato esattamente gli oggetti che cercavo...",
   "npcDialogues.bert.positiveDelivery3": "Ah, era ora! Avete acquistato esattamente gli oggetti che cercavo. Eccellente!",
@@ -2671,10 +2671,10 @@
   "plaza.magicButton.query": "Un pulsante magico è apparso nella piazza. Vuoi premerlo?",
   "nyonStatue.memory": "In ricordo di",
   "nyonStatue.description": "Il leggendario cavaliere responsabile dell'eliminazione dei goblin dalle miniere. Poco dopo la sua vittoria morì avvelenato da un cospiratore Goblin. I Sunflower Citizens eressero questa statua con la loro armatura per commemorare le sue conquiste.",
-  "obsessionDialogue.line1": "Ah, il {{itemName}}! Vorrei solo vederlo, non possederlo. Mostramelo e {{seasonalTicket}} s sarà la tua ricompensa.",
-  "obsessionDialogue.line2": "Hai portato il {{itemName}}? Voglio solo guardarlo. Fammi vedere e {{seasonalTicket}} s sarà tuo.",
-  "obsessionDialogue.line4": "Il {{itemName}}! Non voglio tenerlo, solo vederlo. Mostramelo e {{seasonalTicket}} sono tuoi.",
-  "obsessionDialogue.line5": "Offrite una vista del {{itemName}}? Tutto ciò che chiedo è di vederlo brevemente. Per la tua generosità, ti saranno concessi {{seasonalTicket}}.",
+  "obsessionDialogue.line1": "Ah, il {{itemName}}! Vorrei solo vederlo, non possederlo. Mostramelo e {{chapterTicket}} s sarà la tua ricompensa.",
+  "obsessionDialogue.line2": "Hai portato il {{itemName}}? Voglio solo guardarlo. Fammi vedere e {{chapterTicket}} s sarà tuo.",
+  "obsessionDialogue.line4": "Il {{itemName}}! Non voglio tenerlo, solo vederlo. Mostramelo e {{chapterTicket}} sono tuoi.",
+  "obsessionDialogue.line5": "Offrite una vista del {{itemName}}? Tutto ciò che chiedo è di vederlo brevemente. Per la tua generosità, ti saranno concessi {{chapterTicket}}.",
   "offer.okxOffer": "Salve Farmer, ho un'offerta OKX esclusiva per te!",
   "offer.beginWithNFT": "Per iniziare dovrai creare un Farm NFT gratuito. Ciò includerà:",
   "offer.getStarterPack": "Ottieni subito lo Starter Pack",
@@ -3492,9 +3492,9 @@
   "gems.update": "Aggiornamento delle gemme",
   "gems.intro": "Per prepararci all'onboarding di nuovi giocatori, abbiamo sostituito i Block Bucks con una nuova valuta: le gemme!",
   "gems.intro.two": "Riceverai 20 gemme per ogni Block Buck che possiedi.",
-  "birdieplaza.commonMethod": "Il metodo più comune per guadagnare {{seasonalTicket}} è raccogliere risorse o raccogliere altri oggetti richiesti e poi consegnarli a Bumpkins in the Plaza e in altre aree.",
+  "birdieplaza.commonMethod": "Il metodo più comune per guadagnare {{chapterTicket}} è raccogliere risorse o raccogliere altri oggetti richiesti e poi consegnarli a Bumpkins in the Plaza e in altre aree.",
   "birdieplaza.seasonQuests": "Questa stagione offre missioni entusiasmanti, rari oggetti da collezione e dispositivi indossabili esclusivi che puoi guadagnare.",
-  "birdieplaza.craftItems": "Per ottenere questi oggetti rari, devi raccogliere {{seasonalTicket}} e cambiarli allo Stella's Megastore o fare un'offerta presso la Casa d'Aste.",
+  "birdieplaza.craftItems": "Per ottenere questi oggetti rari, devi raccogliere {{chapterTicket}} e cambiarli allo Stella's Megastore o fare un'offerta presso la Casa d'Aste.",
   "reward.streak.oneYear": "Premi per una serie di 365 giorni",
   "season.codex.nextDrop.available": "{{dropSupply}} disponibile",
   "description.hoot.boost": "+0,5 frumento, ravanello, cavolo riccio, riso, orzo",
@@ -3547,7 +3547,7 @@
   "description.chicken": "Fonte affidabile di uova fresche e morbide piume, questo pollo fa volentieri la sua parte con la giusta cura.",
   "description.cow": "Questa delicata mucca fornisce latte fresco e pelle resistente. Rendila felice con cibo e affetto in abbondanza.",
   "description.sheep": "Questa soffice pecora fornisce sia lana normale che lussuosa lana merino. Rendila felice per i risultati più delicati!",
-  "obsessionDialogue.line3": "È il {{itemName}} che hai? Un semplice sguardo è tutto ciò che desidero. Per questo, riceverai {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "È il {{itemName}} che hai? Un semplice sguardo è tutto ciò che desidero. Per questo, riceverai {{chapterTicket}} s.",
   "competition.maybeLater": "Forse più tardi",
   "world.lvl.requirement": "Livello {{lvl}}",
   "world.factionMembersOnly": "Solo membri della fazione",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "Le zucche non apprezzano il garofano giallo.",
   "noBumpkin.bumpkinHelp": "Hai bisogno di un Bumpkin per aiutarti a piantare, raccogliere, tagliare, estrarre ed espandere la tua terra. Presto sarà disponibile il supporto per aggiungere un Bumpkin!",
   "chores.weeklyChores": "Lavori settimanali",
-  "chores.completeChoresToEarn": "Completa le faccende per far guadagnare {{seasonalTicket}} a Bumpkins.",
+  "chores.completeChoresToEarn": "Completa le faccende per far guadagnare {{chapterTicket}} a Bumpkins.",
   "chores.lockedChore": "Livello {{level}}",
   "chores.completed": "Completato",
   "chores.complete": "Completo",
@@ -3805,7 +3805,7 @@
   "description.brush": "Spazzola per animali. Usalo per mostrare affetto ai tuoi animali.",
   "description.music.box": "Suona musica per gli animali. Usalo per mostrare affetto ai tuoi animali.",
   "levelUpMax": "Livello massimo!",
-  "birdieplaza.choresAndRewards": "Puoi guadagnare {{seasonalTicket}} anche con le faccende settimanali, i premi giornalieri per i bauli, la strana ossessione di Bert e il sistema di ricompense!",
+  "birdieplaza.choresAndRewards": "Puoi guadagnare {{chapterTicket}} anche con le faccende settimanali, i premi giornalieri per i bauli, la strana ossessione di Bert e il sistema di ricompense!",
   "description.community.coin": "(WIP) Una moneta di valore riservata per un uso futuro a Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Ogni letto unico può ospitare un lavoratore agricolo.",
   "bedsMigration.bedsNeededDescription3": "Posiziona i letti per assumere altri braccianti agricoli!",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "Articolo venduto",
   "marketplace.congratulationsItemSold": "Congratulazioni, il tuo articolo è stato venduto!",
   "withdraw.taxFree": "I goblin ti tassano sugli SFL guadagnati nel gioco. Sono esclusi i depositi e il marketplace.",
-  "bounties.board.ticketAmount": "L'importo di {{seasonalTicket}} varierà ogni settimana in base alle richieste.",
+  "bounties.board.ticketAmount": "L'importo di {{chapterTicket}} varierà ogni settimana in base alle richieste.",
   "marketplace.listing.cancelling": "Annullamento dell'inserzione",
   "marketplace.listing.cancelling.success": "Congratulazioni, hai cancellato con successo la tua inserzione!",
   "marketplace.listing.cancelling.failure": "Ops, qualcosa è andato storto. Per favore riprova.",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} acquisti giornalieri rimanenti",
   "remaining.free.purchase": "1 acquisto giornaliero rimanente",
   "statements.potionRule.four": "Al termine del gioco, il punteggio dell'ultimo tentativo determinerà la tua ricompensa.",
-  "obsessionDialogue.codex": "È il {{itemName}} che hai? Raggiungi la piazza per trovare Bert e mostrarglielo, e in cambio ti darà {{seasonalTicket}} s.",
+  "obsessionDialogue.codex": "È il {{itemName}} che hai? Raggiungi la piazza per trovare Bert e mostrarglielo, e in cambio ti darà {{chapterTicket}} s.",
   "bounties.board.travel": "Raggiungi la piazza e trova Poppy per soddisfare questi doni",
   "description.trade.points": "Guadagnato scambiando oggetti da collezione e indossabili sul mercato. Possono essere scambiati con ricompense di gioco.",
   "reward.collectible": "Un oggetto da collezione per la tua fattoria",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "Visita il negozio meteorologico in piazza per proteggere la tua fattoria!",
   "beds": "Letti",
   "weatherItems": "Articoli meteorologici",
-  "birdieplaza.currentSeason": "Siamo attualmente nel capitolo {{currentSeason}} e i Bumpkins stanno impazzendo per {{seasonalTicket}} s.",
+  "birdieplaza.currentSeason": "Siamo attualmente nel capitolo {{currentSeason}} e i Bumpkins stanno impazzendo per {{chapterTicket}} s.",
   "description.catch.the.kraken.banner": "Il Kraken è arrivato! Il marchio di un partecipante al capitolo Catch the Kraken.",
   "description.solar.flare.ticket": "(LEGACY) Un biglietto usato durante il capitolo Solar Flare",
   "description.dawn.breaker.ticket": "(LEGACY) Un biglietto usato durante il capitolo Dawn Breaker",
