--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -122,11 +122,11 @@
   "beehive.hives.plural": "じんましん",
   "birdieplaza.birdieIntro": "こんにちは、私はバーディー、周りで一番美しいバンプキンです！",
   "birdieplaza.admiringOutfit": "あなたが私の服を賞賛しているのに気づきました。素晴らしくない？！？",
-  "birdieplaza.collectTickets": "十分な {{seasonalTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
+  "birdieplaza.collectTickets": "十分な {{chapterTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
   "birdieplaza.whatIsSeason": "シーズンとは？",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{seasonalTicket}} を獲得できます。",
-  "birdieplaza.gatherAndCraft": "{{seasonalTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{chapterTicket}} を獲得できます。",
+  "birdieplaza.gatherAndCraft": "{{chapterTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
   "birdieplaza.newSeasonIntro": "サンフラワーランドでは、3か月ごとに新しいシーズンが始まります。",
   "description.speed.chicken.one": "鶏の卵生産が 10% 速くなりました。",
   "description.banana.chicken": "バナナを美味しくするチキン。私たちはなんて素晴らしい世界に住んでいるのでしょう。",
@@ -1917,7 +1917,7 @@
   "harvestflower.notReady": "花は収穫の準備ができていません",
   "harvestflower.alr.plant": "花はすでに植えられています",
   "hayseedHankv2.dialog1": "やあ、やあ、若いウィッパースナッパーズ！私はヘイシード・ハンクです。昔ながらのバンプキン農家のベテランで、古き良き時代のように土地の世話をしています。",
-  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{seasonalTicket}} で報酬をあげます。",
+  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{chapterTicket}} で報酬をあげます。",
   "hayseedHankv2.action": "やってみよう",
   "hayseedHankv2.title": "ハンクの日常雑用",
   "hayseedHankv2.newChoresAvailable": "新しい雑用:{{timeLeft}}",
@@ -2491,7 +2491,7 @@
   "npcDialogues.bert.intro2": "ああ、気の合う精神！サンフロリアには数え切れないほどの宝物があります...",
   "npcDialogues.bert.intro3": "ミステリアスの担い手、ご挨拶！サンフロリアでは、一部の商品は配送が必要です...",
   "npcDialogues.bert.intro4": "こんにちは、隠されたものを求める人！サンフロレアのエンチャントは2つに分類できます...",
-  "bert.day": "{{seasonalTicket}} を申請してから3日間は、このアイテムを出金できません。",
+  "bert.day": "{{chapterTicket}} を申請してから3日間は、このアイテムを出金できません。",
   "npcDialogues.bert.positiveDelivery1": "信じられない！あなたは私に必要なものをすべて持ってきてくれました...",
   "npcDialogues.bert.positiveDelivery2": "ああ、魅力的な発見！探していたアイテムとまったく同じものを持ってきてくれたね...",
   "npcDialogues.bert.positiveDelivery3": "ああ、そろそろ時間だ！私が探していたアイテムとまったく同じものを手に入れました。素晴らしい！",
@@ -2713,10 +2713,10 @@
   "plaza.magicButton.query": "広場に魔法のボタンが現れました。押したいかい？",
   "nyonStatue.memory": "を記念して",
   "nyonStatue.description": "地雷からゴブリンを一掃した伝説の騎士。勝利して間もなく、彼はゴブリンの共謀者に毒殺されて死亡した。ヒマワリの市民たちは、彼の征服を記念して、彼の鎧を使ってこの像を建てました。",
-  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{seasonalTicket}} sが報酬になります。",
-  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{seasonalTicket}} は君のものだ。",
-  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{seasonalTicket}} はあなたのものです。",
-  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{seasonalTicket}} が授与されます。",
+  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{chapterTicket}} sが報酬になります。",
+  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{chapterTicket}} は君のものだ。",
+  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{chapterTicket}} はあなたのものです。",
+  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{chapterTicket}} が授与されます。",
   "offer.okxOffer": "ハウディファーマー、OKX限定のオファーがあります！",
   "offer.beginWithNFT": "まず、無料のファームNFTをミントする必要があります。これには以下が含まれます。",
   "offer.getStarterPack": "スターターパックを今すぐ入手",
@@ -3492,9 +3492,9 @@
   "gems.update": "Gem アップデート",
   "gems.intro": "新規プレイヤーのオンボーディングに備えて、Block Bucksを新しい通貨「ジェム」に置き換えました！",
   "gems.intro.two": "所有しているブロックバックごとに20ジェムを受け取ります。",
-  "birdieplaza.commonMethod": "{{seasonalTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
+  "birdieplaza.commonMethod": "{{chapterTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
   "birdieplaza.seasonQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
-  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{seasonalTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
+  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{chapterTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
   "reward.streak.oneYear": "365 日連続リワード",
   "season.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
   "description.hoot.boost": "+0.5 小麦、大根、ケール、米、大麦",
@@ -3547,7 +3547,7 @@
   "description.chicken": "新鮮な卵と柔らかい羽毛の信頼できる供給源であるこの鶏肉は、適切な手入れをすれば喜んでその役割を果たします。",
   "description.cow": "この優しい牛は、新鮮なミルクと丈夫な革を使用しています。たっぷりの食べ物と愛情を込めて幸せに保ちましょう。",
   "description.sheep": "このふわふわの羊は、通常のウールと高級なメリノウールの両方を備えています。最高にソフトな仕上がりになるのでハッピーな状態を保ちましょう。",
-  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{seasonalTicket}} が届きます。",
+  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{chapterTicket}} が届きます。",
   "competition.maybeLater": "たぶん後で",
   "world.lvl.requirement": "レベル {{lvl}}",
   "world.factionMembersOnly": "ファクションメンバーのみ",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "バンプキンは黄色いカーネーションを大切にしません。",
   "noBumpkin.bumpkinHelp": "土地を植えたり、収穫したり、切り刻んだり、掘ったり、土地を広げたりするには、バンプキンが必要です。バンプキンを追加するためのサポートが間もなく開始されます！",
   "chores.weeklyChores": "ウィークリー雑用",
-  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{seasonalTicket}} を稼ぎましょう。",
+  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{chapterTicket}} を稼ぎましょう。",
   "chores.lockedChore": "レベル {{level}}",
   "chores.completed": "完了しました",
   "chores.complete": "完了",
@@ -3805,7 +3805,7 @@
   "description.brush": "アニマルブラシ。これを使って動物への愛情を示しましょう。",
   "description.music.box": "動物に音楽をかけます。これを使って動物への愛情を示しましょう。",
   "levelUpMax": "最大レベル！",
-  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{seasonalTicket}} を獲得することもできます！",
+  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{chapterTicket}} を獲得することもできます！",
   "description.community.coin": "(WIP) 将来サンフラワーランドで使えるように予約されている貴重なコイン。",
   "bedsMigration.bedsNeededDescription2": "それぞれの個性的なベッドで片手でも眠れます。",
   "bedsMigration.bedsNeededDescription3": "ベッドを置いて農夫をもっと雇おう！",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "商品が販売されました",
   "marketplace.congratulationsItemSold": "おめでとうございます。商品は売れました。",
   "withdraw.taxFree": "ゴブリンはゲーム内で獲得したSFLに課税します。これにはデポジットとマーケットプレイスは含まれません。",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} の金額は、リクエストに応じて毎週異なります。",
+  "bounties.board.ticketAmount": "{{chapterTicket}} の金額は、リクエストに応じて毎週異なります。",
   "marketplace.listing.cancelling": "出品をキャンセルする",
   "marketplace.listing.cancelling.success": "おめでとうございます。出品は正常にキャンセルされました。",
   "marketplace.listing.cancelling.failure": "おっと、何かがおかしくなりました。もう一度試してください。",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} 日次購入残高",
   "remaining.free.purchase": "1 日の購入が残り",
   "statements.potionRule.four": "ゲームが完了すると、最後のトライのスコアによって報酬が決まります。",
-  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{seasonalTicket}} をくれます。",
+  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{chapterTicket}} をくれます。",
   "bounties.board.travel": "広場に行き、ポピーを見つけてこれらの賞金を稼ぎましょう",
   "description.trade.points": "マーケットプレイスで収集品やウェアラブルを取引することで獲得できます。ゲーム内の報酬と交換できます。",
   "reward.collectible": "農場用の収集品",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "広場のウェザーショップに行って農場を守ろう！",
   "beds": "ベッド",
   "weatherItems": "天気アイテム",
-  "birdieplaza.currentSeason": "現在は {{currentSeason}} チャプターで、バンプキンは {{seasonalTicket}} に夢中になっています。",
+  "birdieplaza.currentSeason": "現在は {{currentSeason}} チャプターで、バンプキンは {{chapterTicket}} に夢中になっています。",
   "description.catch.the.kraken.banner": "クラーケンがやってきた！「キャッチ・ザ・クラーケン」チャプターの参加者のマーク。",
   "description.solar.flare.ticket": "(レガシー) ソーラーフレアチャプター中に使用されたチケット",
   "description.dawn.breaker.ticket": "(レガシー) ドーンブレイカーチャプター中に使用したチケット",
