--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -2277,10 +2277,10 @@
   "beehive.estimatedFull": "Total estimado",
   "beehive.hive.singular": "colmeia",
   "beehive.hives.plural": "colmeias",
-  "birdieplaza.collectTickets": "Colete {{seasonalTicket}} s suficientes e você poderá criar NFTs raros. Foi assim que consegui essa roupa rara!",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Você pode ganhar {{seasonalTicket}} de várias maneiras.",
-  "birdieplaza.gatherAndCraft": "Reúna {{seasonalTicket}} s suficientes e você poderá comprar alguns itens raros, como eu fiz.",
+  "birdieplaza.collectTickets": "Colete {{chapterTicket}} s suficientes e você poderá criar NFTs raros. Foi assim que consegui essa roupa rara!",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Você pode ganhar {{chapterTicket}} de várias maneiras.",
+  "birdieplaza.gatherAndCraft": "Reúna {{chapterTicket}} s suficientes e você poderá comprar alguns itens raros, como eu fiz.",
   "description.pharaoh.chicken": "Uma galinha dominante, +1 Dig.",
   "description.knight.chicken": "Um frango forte e nobre que aumenta sua produção de óleo.",
   "description.time.warp.totem": "Velocidade 2x para plantações, árvores, frutas, culinária e minerais. Dura apenas 2 horas",
@@ -2836,7 +2836,7 @@
   "chores.hank.intro": "Complete tarefas na fazenda para ganhar recompensas dos Bumpkins.",
   "chores.kingdom": "Tarefas do Reino",
   "chores.kingdom.intro": "Complete tarefas em sua fazenda para ganhar marcas da sua Casa de Facção",
-  "hayseedHankv2.dialog2": "No entanto, meus ossos não são mais o que costumavam ser. Se você puder me ajudar com minhas tarefas diárias, eu o recompensarei com {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "No entanto, meus ossos não são mais o que costumavam ser. Se você puder me ajudar com minhas tarefas diárias, eu o recompensarei com {{chapterTicket}}.",
   "hayseedHankv2.newChoresAvailable": "Novas tarefas: {{timeLeft}}",
   "hayseedHankv2.confirmSkipChore": "Tem certeza de que deseja pular essa tarefa?",
   "confirmation.craft": "Tem certeza de que deseja criar {{item}}?",
@@ -2975,7 +2975,7 @@
   "npcDialogues.oldSalty.chestUnopened2": "Você tem direito a um presente precioso por dia.",
   "npcDialogues.oldSalty.chestOpened1": "Você abriu o Baú do Pirata hoje!",
   "npcDialogues.oldSalty.chestOpened2": "Volte amanhã para saquear o Baú dos Piratas mais uma vez!",
-  "bert.day": "Você não pode retirar este item por 3 dias após reivindicar {{seasonalTicket}} s.",
+  "bert.day": "Você não pode retirar este item por 3 dias após reivindicar {{chapterTicket}} s.",
   "npcDialogues.peggy.intro1": "Olá, querida! Você veio me trazer algumas delícias deliciosas? Mal posso esperar para ver o que você preparou!",
   "npcDialogues.peggy.intro2": "Bem, passe manteiga nos meus biscoitos! Você tem essas guloseimas saborosas prontas para mim? Estou pronto para uma diversão deliciosa!",
   "npcDialogues.peggy.intro3": "Olá, parceiro! Eu estava esperando para ver a deliciosa criação que você me trouxe. Pronto para compartilhar um pouco da alegria culinária?",
@@ -3070,10 +3070,10 @@
   "npcDialogues.pharaoh.intro1": "Saudações, viajante. Eu sou o Faraó, buscador de relíquias perdidas e conhecimentos esquecidos. Você descobriu algum tesouro antigo?",
   "npcDialogues.pharaoh.intro2": "Bem-vindo, andarilho. As areias do tempo guardam muitos segredos, e eu estou em busca deles. Você encontrou algum artefato em sua jornada?",
   "npcDialogues.pharaoh.intro3": "Salve, explorador. Eu sou o Faraó, guardião de segredos antigos. Você descobriu alguma relíquia que possa ajudar a resolver os mistérios do nosso passado?",
-  "obsessionDialogue.line1": "Ah, o {{itemName}}! Eu só quero vê-la, não possuí-la. Mostre para mim e {{seasonalTicket}} s será sua recompensa.",
-  "obsessionDialogue.line2": "Você trouxe o {{itemName}}? Eu só quero olhar para isso. Deixe-me ver, e {{seasonalTicket}} s será seu.",
-  "obsessionDialogue.line4": "O {{itemName}}! Não quero guardá-la, só contemplá-la. Mostre para mim, e {{seasonalTicket}} s são seus.",
-  "obsessionDialogue.line5": "Você oferece uma visão do {{itemName}}? Tudo o que peço é que o veja brevemente. Por sua generosidade, {{seasonalTicket}} s serão concedidos a você.",
+  "obsessionDialogue.line1": "Ah, o {{itemName}}! Eu só quero vê-la, não possuí-la. Mostre para mim e {{chapterTicket}} s será sua recompensa.",
+  "obsessionDialogue.line2": "Você trouxe o {{itemName}}? Eu só quero olhar para isso. Deixe-me ver, e {{chapterTicket}} s será seu.",
+  "obsessionDialogue.line4": "O {{itemName}}! Não quero guardá-la, só contemplá-la. Mostre para mim, e {{chapterTicket}} s são seus.",
+  "obsessionDialogue.line5": "Você oferece uma visão do {{itemName}}? Tudo o que peço é que o veja brevemente. Por sua generosidade, {{chapterTicket}} s serão concedidos a você.",
   "offer.beginWithNFT": "Para começar, você precisará criar um Farm NFT gratuito. Isso incluirá:",
   "onCollectReward.Missing.Shovel.description": "Expanda sua ilha para encontrá-la.",
   "orderhelp.ticket.deliveries.closed": "As entregas de ingressos estão fechadas no momento",
@@ -3492,9 +3492,9 @@
   "gems.update": "Atualização de gemas",
   "gems.intro": "Para nos prepararmos para a contratação de novos jogadores, substituímos o Block Bucks por uma nova moeda... Gems!",
   "gems.intro.two": "Você receberá 20 joias por cada Block Buck que possuir.",
-  "birdieplaza.commonMethod": "O método mais comum de ganhar {{seasonalTicket}} s é reunir recursos ou coletar outros itens solicitados e, em seguida, entregá-los ao Bumpkins in the Plaza e a algumas outras áreas.",
+  "birdieplaza.commonMethod": "O método mais comum de ganhar {{chapterTicket}} s é reunir recursos ou coletar outros itens solicitados e, em seguida, entregá-los ao Bumpkins in the Plaza e a algumas outras áreas.",
   "birdieplaza.seasonQuests": "Esta temporada tem missões emocionantes, itens colecionáveis raros e dispositivos vestíveis exclusivos que você pode ganhar.",
-  "birdieplaza.craftItems": "Para obter esses itens raros, você deve coletar {{seasonalTicket}} s e trocá-los na Stella's Megastore ou licitar na Casa de Leilões.",
+  "birdieplaza.craftItems": "Para obter esses itens raros, você deve coletar {{chapterTicket}} s e trocá-los na Stella's Megastore ou licitar na Casa de Leilões.",
   "reward.streak.oneYear": "Recompensa de sequência de 365 dias",
   "season.codex.nextDrop.available": "{{dropSupply}} disponível",
   "description.hoot.boost": "+0,5 Trigo, rabanete, couve, arroz, cevada",
@@ -3547,7 +3547,7 @@
   "description.chicken": "Uma fonte confiável de ovos frescos e penas macias, esta galinha faz sua parte alegremente com o cuidado certo.",
   "description.cow": "Esta vaca gentil fornece leite fresco e couro durável. Mantenha-o feliz com muita comida e carinho.",
   "description.sheep": "Esta ovelha fofa fornece lã normal e lã merino luxuosa. Fique feliz para obter os melhores resultados!",
-  "obsessionDialogue.line3": "Esse é o {{itemName}} que você tem? Um simples olhar é tudo o que eu desejo. Para isso, você receberá {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Esse é o {{itemName}} que você tem? Um simples olhar é tudo o que eu desejo. Para isso, você receberá {{chapterTicket}} s.",
   "competition.maybeLater": "Talvez mais tarde",
   "world.lvl.requirement": "Nvel {{lvl}}",
   "world.factionMembersOnly": "Somente membros da facção",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "Os caipiras não valorizam o cravo amarelo.",
   "noBumpkin.bumpkinHelp": "Você precisa de um caipira para ajudá-lo a plantar, colher, cortar, minerar e expandir sua terra. O suporte estará disponível em breve para adicionar um Bumpkin!",
   "chores.weeklyChores": "Tarefas semanais",
-  "chores.completeChoresToEarn": "Complete as tarefas de Bumpkins para ganhar {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Complete as tarefas de Bumpkins para ganhar {{chapterTicket}} s.",
   "chores.lockedChore": "Nvel {{level}}",
   "chores.completed": "Concluído",
   "chores.complete": "Completo",
@@ -3805,7 +3805,7 @@
   "description.brush": "Escova para animais. Use isso para mostrar afeto aos seus animais.",
   "description.music.box": "Toca música para animais. Use isso para mostrar afeto aos seus animais.",
   "levelUpMax": "Nível máximo!",
-  "birdieplaza.choresAndRewards": "Você também pode ganhar {{seasonalTicket}} s por meio de tarefas semanais, recompensas diárias no baú, Bert's Odd Obsession e sistema de recompensas!",
+  "birdieplaza.choresAndRewards": "Você também pode ganhar {{chapterTicket}} s por meio de tarefas semanais, recompensas diárias no baú, Bert's Odd Obsession e sistema de recompensas!",
   "description.community.coin": "(WIP) Uma moeda valiosa reservada para uso futuro em Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Cada cama exclusiva pode acomodar um lavrador.",
   "bedsMigration.bedsNeededDescription3": "Coloque camas para contratar mais fazendeiros!",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "Item vendido",
   "marketplace.congratulationsItemSold": "Parabéns, seu item foi vendido!",
   "withdraw.taxFree": "Os goblins tributam você sobre o SFL obtido no jogo. Isso exclui depósitos e o mercado.",
-  "bounties.board.ticketAmount": "A quantidade de {{seasonalTicket}} s variará a cada semana com base nas solicitações.",
+  "bounties.board.ticketAmount": "A quantidade de {{chapterTicket}} s variará a cada semana com base nas solicitações.",
   "marketplace.listing.cancelling": "Cancelamento do anúncio",
   "marketplace.listing.cancelling.success": "Parabéns, você cancelou seu anúncio com sucesso!",
   "marketplace.listing.cancelling.failure": "Opa, algo deu errado. Por favor, tente novamente.",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} compras diárias restantes",
   "remaining.free.purchase": "1 compra diária restante",
   "statements.potionRule.four": "Quando o jogo terminar, a pontuação da sua última tentativa determinará sua recompensa.",
-  "obsessionDialogue.codex": "Esse é o {{itemName}} que você tem? Vá até a praça para encontrar Bert e mostre a ele, e ele lhe dará {{seasonalTicket}} s em troca.",
+  "obsessionDialogue.codex": "Esse é o {{itemName}} que você tem? Vá até a praça para encontrar Bert e mostre a ele, e ele lhe dará {{chapterTicket}} s em troca.",
   "bounties.board.travel": "Viaje até a praça e encontre Poppy para cumprir essas recompensas",
   "description.trade.points": "Ganhou negociando itens colecionáveis e vestíveis no mercado. Pode ser trocado por recompensas no jogo.",
   "reward.collectible": "Um colecionável para sua fazenda",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "Visite a loja de meteorologia na praça para proteger sua fazenda!",
   "beds": "Camas",
   "weatherItems": "Itens climáticos",
-  "birdieplaza.currentSeason": "Atualmente, estamos no capítulo {{currentSeason}} e os Bumpkins estão ficando loucos por {{seasonalTicket}} s.",
+  "birdieplaza.currentSeason": "Atualmente, estamos no capítulo {{currentSeason}} e os Bumpkins estão ficando loucos por {{chapterTicket}} s.",
   "description.catch.the.kraken.banner": "O Kraken está aqui! A marca de um participante do Capítulo Catch the Kraken.",
   "description.solar.flare.ticket": "(LEGACY) Um ingresso usado durante o capítulo Solar Flare",
   "description.dawn.breaker.ticket": "(LEGACY) Um ingresso usado durante o capítulo Dawn Breaker",
