--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -95,7 +95,7 @@
   "beehive.speed": "Скорость",
   "beehive.yield": "Урожай",
   "beetrootBeast.description": "Собрать Свеклу 2,000 раз",
-  "bert.day": "Ты не сможешь вывести этот предмет в течение 3 дней после получения {{seasonalTicket}}",
+  "bert.day": "Ты не сможешь вывести этот предмет в течение 3 дней после получения {{chapterTicket}}",
   "beta": "Бета",
   "betty-intro.headline": "Как развить твою ферму",
   "betty-intro.one": "Привет-привет! Добро пожаловать ко мне на рынок.",
@@ -115,13 +115,13 @@
   "bigSpender.description": "Потратить 10 SFL",
   "birdieplaza.admiringOutfit": "Я заметила, что ты восхищаешься моим нарядом. Ну разве он не великолепен?!",
   "birdieplaza.birdieIntro": "Привет, я - Бёрди, самый красивый бампкин в округе!",
-  "birdieplaza.choresAndRewards": "Вы также можете заработать {{seasonalTicket}} s, выполняя еженедельные задания по дому, ежедневные награды за сундуки, «Странную одержимость Берта» и систему наград!",
-  "birdieplaza.collectTickets": "Собери достаточно {{seasonalTicket}} и ты сможешь купить редкие NFTs. Так у меня и появился этот редкий наряд!",
-  "birdieplaza.commonMethod": "Самый распространенный способ заработать {{seasonalTicket}} s — собирать ресурсы или другие запрашиваемые предметы, а затем доставлять на площадь и в другие районы.",
-  "birdieplaza.craftItems": "Чтобы приобрести эти редкие предметы, вы должны собрать {{seasonalTicket}} и обменять их в Stella's Megastore или участвовать в аукционах.",
-  "birdieplaza.earnTicketsVariety": "Ты можешь заработать {{seasonalTicket}} различными способами.",
-  "birdieplaza.gatherAndCraft": "Собери достаточно {{seasonalTicket}} и ты сможешь купить некоторые редкие предметы, как я.",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}’ы?",
+  "birdieplaza.choresAndRewards": "Вы также можете заработать {{chapterTicket}} s, выполняя еженедельные задания по дому, ежедневные награды за сундуки, «Странную одержимость Берта» и систему наград!",
+  "birdieplaza.collectTickets": "Собери достаточно {{chapterTicket}} и ты сможешь купить редкие NFTs. Так у меня и появился этот редкий наряд!",
+  "birdieplaza.commonMethod": "Самый распространенный способ заработать {{chapterTicket}} s — собирать ресурсы или другие запрашиваемые предметы, а затем доставлять на площадь и в другие районы.",
+  "birdieplaza.craftItems": "Чтобы приобрести эти редкие предметы, вы должны собрать {{chapterTicket}} и обменять их в Stella's Megastore или участвовать в аукционах.",
+  "birdieplaza.earnTicketsVariety": "Ты можешь заработать {{chapterTicket}} различными способами.",
+  "birdieplaza.gatherAndCraft": "Собери достаточно {{chapterTicket}} и ты сможешь купить некоторые редкие предметы, как я.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}’ы?",
   "birdieplaza.newSeasonIntro": "Каждые 3 месяца в Sunflower Land начинается новый сезон.",
   "birdieplaza.seasonQuests": "В этом сезоне вас ждут увлекательные задания, редкие коллекционные предметы и эксклюзивные носимые вещи, которые вы можете заработать.",
   "birdieplaza.whatIsSeason": "Что такое сезон?",
@@ -137,7 +137,7 @@
   "bounties.board": "Доска наград",
   "bounties.board.empty": "На данный момент предложений нет.",
   "bounties.board.info": "Торгуйте наградами на этой неделе до истечения времени.",
-  "bounties.board.ticketAmount": "Сумма {{seasonalTicket}} будет меняться каждую неделю в зависимости от запросов.",
+  "bounties.board.ticketAmount": "Сумма {{chapterTicket}} будет меняться каждую неделю в зависимости от запросов.",
   "bounties.board.travel": "Отправляйтесь на площадь и найдите Поппи, чтобы получить эти награды",
   "bounties.flower.intro.one": "Привет, Бампкин! На этой неделе у нас в подарок цветы.",
   "bounties.flower.intro.two": "Принесите мне свои лучшие цветы, и я сделаю так, чтобы они того стоили.",
@@ -385,7 +385,7 @@
   "chores.chopTrees": "Срубить 3 дерева",
   "chores.choresFrozen": "Скоро появится новый сезонный список дел.",
   "chores.complete": "Завершить",
-  "chores.completeChoresToEarn": "Выполняйте работу по дому для Бампкинов, чтобы заработать {{seasonalTicket}}",
+  "chores.completeChoresToEarn": "Выполняйте работу по дому для Бампкинов, чтобы заработать {{chapterTicket}}",
   "chores.completed": "Завершено",
   "chores.earnSflIntro": "Если ты хочешь добиться больших успехов в фермерских делах, то лучше начни с продажи Подсолнухов, покупки семян и получения прибыли.",
   "chores.ended": "Все это время я говорю Бампкинсу, что делать... Я устала. Думаю, мне нужен отпуск.",
@@ -2467,7 +2467,7 @@
   "hayseedHankv2.action": "Приступим",
   "hayseedHankv2.confirmSkipChore": "Уверен что хочешь пропустить это задание?",
   "hayseedHankv2.dialog1": "Ну здравствуй, малец! Я - Hayseed Hank, опытный фермер, ухаживающий за землей как в старые добрые времена.",
-  "hayseedHankv2.dialog2": "Однако мои кости уже не те, что прежде. Если ты поможешь мне с повседневными делами, я вознагражу тебя {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Однако мои кости уже не те, что прежде. Если ты поможешь мне с повседневными делами, я вознагражу тебя {{chapterTicket}}.",
   "hayseedHankv2.greeting": "Ну здравствуй, малец! Я - Hayseed Hank...",
   "hayseedHankv2.newChoresAvailable": "Новые дела: {{timeLeft}}",
   "hayseedHankv2.skipChores": "Пропускать задания можно на следующий день",
@@ -3642,12 +3642,12 @@
   "nyonStatue.description": "Легендарный рыцарь, ответственный за очистку шахт от гоблинов. Вскоре после одержанной победы он был отравлен гоблинским заговорщиком. Граждане Sunflower Land воздвигли эту статую в память о его победах.",
   "nyonStatue.memory": "В память о",
   "obsession": "Одержимость",
-  "obsessionDialogue.codex": "Это то {{itemName}}, которое у вас есть? Отправляйтесь на площадь, найдите Берта и покажите его ему, а взамен он даст вам {{seasonalTicket}}.",
-  "obsessionDialogue.line1": "Уф, {{itemName}}! Я хочу только увидеть это, а не обладать. Покажи мне, и {{seasonalTicket}} будет твоей наградой.",
-  "obsessionDialogue.line2": "Ты принес {{itemName}}? Я просто хочу на него посмотреть. Дай мне посмотреть, и {{seasonalTicket}} будут твоими.",
-  "obsessionDialogue.line3": "Это то {{itemName}}, которое у вас есть? Мне нужен только один взгляд. За это вы получите {{seasonalTicket}} s.",
-  "obsessionDialogue.line4": "{{itemName}}! Я не хочу его оставлять, просто чтобы полюбоваться. Покажи его мне, и {{seasonalTicket}} твои.",
-  "obsessionDialogue.line5": "Ты дашь посмотреть {{itemName}}? Все, что я прошу, это взглянуть на него мельком. За твою щедрость тебе будут выписаны {{seasonalTicket}}.",
+  "obsessionDialogue.codex": "Это то {{itemName}}, которое у вас есть? Отправляйтесь на площадь, найдите Берта и покажите его ему, а взамен он даст вам {{chapterTicket}}.",
+  "obsessionDialogue.line1": "Уф, {{itemName}}! Я хочу только увидеть это, а не обладать. Покажи мне, и {{chapterTicket}} будет твоей наградой.",
+  "obsessionDialogue.line2": "Ты принес {{itemName}}? Я просто хочу на него посмотреть. Дай мне посмотреть, и {{chapterTicket}} будут твоими.",
+  "obsessionDialogue.line3": "Это то {{itemName}}, которое у вас есть? Мне нужен только один взгляд. За это вы получите {{chapterTicket}} s.",
+  "obsessionDialogue.line4": "{{itemName}}! Я не хочу его оставлять, просто чтобы полюбоваться. Покажи его мне, и {{chapterTicket}} твои.",
+  "obsessionDialogue.line5": "Ты дашь посмотреть {{itemName}}? Все, что я прошу, это взглянуть на него мельком. За твою щедрость тебе будут выписаны {{chapterTicket}}.",
   "ocean.fishing": "Рыбалка в океане",
   "off": "Выключено",
   "offer.beginWithNFT": "Для начала тебе нужно будет создать бесплатный Farm NFT. Это будет включать:",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "Посетите магазин погоды на площади, чтобы защитить свою ферму!",
   "beds": "Кровати",
   "weatherItems": "Предметы погоды",
-  "birdieplaza.currentSeason": "Сейчас мы в главе {{currentSeason}}, а Бампкинс сходит с ума по {{seasonalTicket}} с.",
+  "birdieplaza.currentSeason": "Сейчас мы в главе {{currentSeason}}, а Бампкинс сходит с ума по {{chapterTicket}} с.",
   "description.catch.the.kraken.banner": "Кракен уже здесь! Знак участника главы «Поймай кракена».",
   "description.solar.flare.ticket": "(LEGACY) Билет, использованный во время главы «Солнечная вспышка»",
   "description.dawn.breaker.ticket": "(LEGACY) Билет, использованный во время главы Dawn Breaker",
