--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -2327,10 +2327,10 @@
   "beehive.estimatedFull": "Tahmini dolu",
   "beehive.hive.singular": "kovan",
   "beehive.hives.plural": "kovanlar",
-  "birdieplaza.collectTickets": "Yeterince {{seasonalTicket}} s toplayın ve nadir NFT'ler oluşturabilirsiniz. Bu nadir kıyafeti böyle aldım!",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "{{seasonalTicket}} çeşitli şekillerde kazanabilirsiniz.",
-  "birdieplaza.gatherAndCraft": "Yeterince {{seasonalTicket}} s toplayın ve benim yaptığım gibi bazı nadir eşyaları satın alabileceksiniz.",
+  "birdieplaza.collectTickets": "Yeterince {{chapterTicket}} s toplayın ve nadir NFT'ler oluşturabilirsiniz. Bu nadir kıyafeti böyle aldım!",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "{{chapterTicket}} çeşitli şekillerde kazanabilirsiniz.",
+  "birdieplaza.gatherAndCraft": "Yeterince {{chapterTicket}} s toplayın ve benim yaptığım gibi bazı nadir eşyaları satın alabileceksiniz.",
   "description.pharaoh.chicken": "Yönetici bir tavuk, +1 Dig.",
   "description.knight.chicken": "Yağ veriminizi artıran güçlü ve asil bir tavuk.",
   "description.time.warp.totem": "Mahsuller, ağaçlar, meyveler, yemek pişirme ve mineraller için 2x hız. Sadece 2 saat sürer",
@@ -2868,7 +2868,7 @@
   "chores.hank.intro": "Bumpkins'den ödül kazanmak için çiftliğin etrafındaki görevleri tamamlayın.",
   "chores.kingdom": "Krallık İşleri",
   "chores.kingdom.intro": "Fraksiyon Evinizden Mark kazanmak için çiftliğinizdeki görevleri tamamlayın",
-  "hayseedHankv2.dialog2": "Ancak kemiklerim eskisi gibi değil. Günlük işlerimde bana yardım edebilirseniz, sizi {{seasonalTicket}} ile ödüllendireceğim.",
+  "hayseedHankv2.dialog2": "Ancak kemiklerim eskisi gibi değil. Günlük işlerimde bana yardım edebilirseniz, sizi {{chapterTicket}} ile ödüllendireceğim.",
   "hayseedHankv2.newChoresAvailable": "Yeni işler: {{timeLeft}}",
   "hayseedHankv2.confirmSkipChore": "Bu işi atlamak istediğinden emin misin?",
   "confirmation.craft": "{{item}} yapmak istediğinizden emin misiniz?",
@@ -3000,7 +3000,7 @@
   "npcDialogues.oldSalty.chestUnopened2": "Günde bir hazine hediyesi almaya hakkınız var.",
   "npcDialogues.oldSalty.chestOpened1": "Bugün Korsan Sandığını açtın!",
   "npcDialogues.oldSalty.chestOpened2": "Korsan Sandığını bir kez daha yağmalamak için yarın geri dön!",
-  "bert.day": "Bu öğeyi {{seasonalTicket}} s talep ettikten sonra 3 gün boyunca geri çekemezsiniz.",
+  "bert.day": "Bu öğeyi {{chapterTicket}} s talep ettikten sonra 3 gün boyunca geri çekemezsiniz.",
   "npcDialogues.peggy.intro1": "Merhaba sevgilim! Bana nefis lezzetler getirmeye mi geldin? Ne pişirdiğini görmek için sabırsızlanıyorum!",
   "npcDialogues.peggy.intro2": "Pekala, bisküvilerimi yağlayın! Benim için o lezzetli ikramları hazırladın mı? Lezzetli eğlenceye hazırım!",
   "npcDialogues.peggy.intro3": "Selamlar, ortak! Bana ne kadar lezzetli bir yaratım getirdiğini görmek için bekliyordum. Biraz mutfak sevinci paylaşmaya hazır mısınız?",
@@ -3095,10 +3095,10 @@
   "npcDialogues.pharaoh.intro1": "Selamlar gezgin. Ben Firavun'um, kayıp kalıntıları ve unutulmuş bilgiyi arayan. Eski hazineleri keşfettin mi?",
   "npcDialogues.pharaoh.intro2": "Hoş geldin, gezgin. Zamanın kumları birçok sır barındırıyor ve ben onları arıyorum. Yolculuğunuzda herhangi bir eser buldunuz mu?",
   "npcDialogues.pharaoh.intro3": "Selamlar kaşif. Ben Firavun'um, eski sırların koruyucusuyum. Geçmişimizin gizemlerini çözmede yardımcı olabilecek herhangi bir kalıntı keşfettin mi?",
-  "obsessionDialogue.line1": "Ah, {{itemName}}! Sadece görmek istiyorum, sahip olmak değil. Bana göster ve {{seasonalTicket}} s senin ödülün olacak.",
-  "obsessionDialogue.line2": "{{itemName}} getirdin mi? Sadece ona bakmak istiyorum. Bakayım, ve {{seasonalTicket}} s senin olacak.",
-  "obsessionDialogue.line4": "{{itemName}}! Onu saklamak istemiyorum, sadece görmek için. Bana göster ve {{seasonalTicket}} s senindir.",
-  "obsessionDialogue.line5": "{{itemName}} 'nin bir görünümünü sunuyorsunuz? Tek istediğim kısaca görmek. Cömertliğiniz için size {{seasonalTicket}} s verilecektir.",
+  "obsessionDialogue.line1": "Ah, {{itemName}}! Sadece görmek istiyorum, sahip olmak değil. Bana göster ve {{chapterTicket}} s senin ödülün olacak.",
+  "obsessionDialogue.line2": "{{itemName}} getirdin mi? Sadece ona bakmak istiyorum. Bakayım, ve {{chapterTicket}} s senin olacak.",
+  "obsessionDialogue.line4": "{{itemName}}! Onu saklamak istemiyorum, sadece görmek için. Bana göster ve {{chapterTicket}} s senindir.",
+  "obsessionDialogue.line5": "{{itemName}} 'nin bir görünümünü sunuyorsunuz? Tek istediğim kısaca görmek. Cömertliğiniz için size {{chapterTicket}} s verilecektir.",
   "offer.beginWithNFT": "Başlamak için ücretsiz bir Farm NFT basmanız gerekecek. Bu şunları içerecektir:",
   "orderhelp.ticket.deliveries.closed": "Bilet teslimatları şu anda kapalı",
   "portal.example.claimPrize": "Ödülünü al!",
@@ -3492,9 +3492,9 @@
   "gems.update": "Mücevher güncellemesi",
   "gems.intro": "Yeni oyunculara katılmaya hazırlanmak için Block Bucks'ı yeni bir para birimi ile değiştirdik... Gems!",
   "gems.intro.two": "Sahip olduğunuz her Blok Buck için 20 Mücevher alacaksınız.",
-  "birdieplaza.commonMethod": "{{seasonalTicket}} s kazanmanın en yaygın yöntemi, kaynakları toplamak veya istenen diğer öğeleri toplamak ve ardından bunları Plaza'daki Bumpkins'e ve diğer bazı bölgelere teslim etmektir.",
+  "birdieplaza.commonMethod": "{{chapterTicket}} s kazanmanın en yaygın yöntemi, kaynakları toplamak veya istenen diğer öğeleri toplamak ve ardından bunları Plaza'daki Bumpkins'e ve diğer bazı bölgelere teslim etmektir.",
   "birdieplaza.seasonQuests": "Bu sezon heyecan verici görevler, nadir koleksiyonlar ve kazanabileceğiniz özel giyilebilir ürünler var.",
-  "birdieplaza.craftItems": "Bu nadir eşyaları elde etmek için {{seasonalTicket}} s toplamanız ve bunları Stella's Megastore'da değiştirmeniz veya Müzayede Evi'nde teklif vermeniz gerekir.",
+  "birdieplaza.craftItems": "Bu nadir eşyaları elde etmek için {{chapterTicket}} s toplamanız ve bunları Stella's Megastore'da değiştirmeniz veya Müzayede Evi'nde teklif vermeniz gerekir.",
   "reward.streak.oneYear": "365 gün seri ödülü",
   "season.codex.nextDrop.available": "{{dropSupply}} mevcut",
   "description.hoot.boost": "+0.5 Buğday, Turp, Lahana, Pirinç, Arpa",
@@ -3547,7 +3547,7 @@
   "description.chicken": "Güvenilir bir taze yumurta ve yumuşak tüy kaynağı olan bu tavuk, doğru bakımla görevini mutlu bir şekilde yapıyor.",
   "description.cow": "Bu nazik inek taze süt ve dayanıklı deri sağlar. Bol miktarda yiyecek ve sevgi ile mutlu edin.",
   "description.sheep": "Bu kabarık koyun hem normal yün hem de lüks merinos yünü sağlar. En yumuşak sonuçlar için mutlu olun!",
-  "obsessionDialogue.line3": "Sahip olduğunuz {{itemName}} bu mu? Tek istediğim sadece bir bakış. Bunun için {{seasonalTicket}} s alacaksınız.",
+  "obsessionDialogue.line3": "Sahip olduğunuz {{itemName}} bu mu? Tek istediğim sadece bir bakış. Bunun için {{chapterTicket}} s alacaksınız.",
   "competition.maybeLater": "Belki daha sonra",
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Sadece grup üyeleri",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "Bumpkins sarı karanfile değer vermez.",
   "noBumpkin.bumpkinHelp": "Toprağınızı ekmenize, hasat etmenize, doğramanıza, madenciliğine ve genişletmenize yardımcı olacak bir Bumpkin'e ihtiyacınız var. Destek yakında bir Bumpkin eklemek için geliyor!",
   "chores.weeklyChores": "Haftalık Ev İşleri",
-  "chores.completeChoresToEarn": "Bumpkins'in {{seasonalTicket}} s kazanması için işleri tamamlayın.",
+  "chores.completeChoresToEarn": "Bumpkins'in {{chapterTicket}} s kazanması için işleri tamamlayın.",
   "chores.lockedChore": "Lvl {{level}}",
   "chores.completed": "Tamamlandı",
   "chores.complete": "Tamamlandı",
@@ -3805,7 +3805,7 @@
   "description.brush": "Hayvan Fırçası. Bunu hayvanlarınıza şefkat göstermek için kullanın.",
   "description.music.box": "Hayvanlara müzik çalar. Bunu hayvanlarınıza şefkat göstermek için kullanın.",
   "levelUpMax": "Maksimum Seviye!",
-  "birdieplaza.choresAndRewards": "Ayrıca haftalık ev işleri, günlük sandık ödülleri, Bert'in Garip Takıntısı ve ödül sistemi ile {{seasonalTicket}} s kazanabilirsiniz!",
+  "birdieplaza.choresAndRewards": "Ayrıca haftalık ev işleri, günlük sandık ödülleri, Bert'in Garip Takıntısı ve ödül sistemi ile {{chapterTicket}} s kazanabilirsiniz!",
   "description.community.coin": "(WIP) Ayçiçeği Ülkesinde gelecekte kullanılmak üzere ayrılmış değerli bir madeni para.",
   "bedsMigration.bedsNeededDescription2": "Her benzersiz yatak bir çiftlik elini uyuyabilir.",
   "bedsMigration.bedsNeededDescription3": "Daha fazla çiftçi kiralamak için yatak yerleştirin!",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "Ürün satıldı",
   "marketplace.congratulationsItemSold": "Tebrikler, öğeniz satıldı!",
   "withdraw.taxFree": "Goblinler oyun içinde kazanılan SFL üzerinden sizi vergi alır. Bu, mevduat ve pazarı hariç tutar.",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} s miktarı isteklere göre her hafta değişecektir.",
+  "bounties.board.ticketAmount": "{{chapterTicket}} s miktarı isteklere göre her hafta değişecektir.",
   "marketplace.listing.cancelling": "Kaydı iptal etme",
   "marketplace.listing.cancelling.success": "Tebrikler, kaydınızı başarıyla iptal ettiniz!",
   "marketplace.listing.cancelling.failure": "Hata, bir şeyler ters gitti. Lütfen tekrar deneyin.",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} kalan günlük alımlar",
   "remaining.free.purchase": "Günlük 1 satın alma kaldı",
   "statements.potionRule.four": "Oyun tamamlandığında, son denemenizin puanı ödülünüzü belirleyecektir.",
-  "obsessionDialogue.codex": "Sahip olduğunuz {{itemName}} bu mu? Bert'i bulmak için plazaya gidin ve ona gösterin, karşılığında size {{seasonalTicket}} s verecektir.",
+  "obsessionDialogue.codex": "Sahip olduğunuz {{itemName}} bu mu? Bert'i bulmak için plazaya gidin ve ona gösterin, karşılığında size {{chapterTicket}} s verecektir.",
   "bounties.board.travel": "Plazaya gidin ve bu ödülleri yerine getirmek için Poppy'yi bulun",
   "description.trade.points": "Piyasada koleksiyon ve giyilebilir eşya ticaretinden kazanıldı. Oyun içi ödüller ile değiştirilebilir.",
   "reward.collectible": "Çiftliğiniz için bir koleksiyon",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "Çiftliğinizi korumak için plazadaki hava durumu dükkanını ziyaret edin!",
   "beds": "Yataklar",
   "weatherItems": "Hava Durumu Öğeleri",
-  "birdieplaza.currentSeason": "Şu anda {{currentSeason}} Bölümü'ndeyiz ve Bumpkins {{seasonalTicket}} s için çıldırıyor.",
+  "birdieplaza.currentSeason": "Şu anda {{currentSeason}} Bölümü'ndeyiz ve Bumpkins {{chapterTicket}} s için çıldırıyor.",
   "description.catch.the.kraken.banner": "Kraken burada! Catch the Kraken Bölümündeki bir katılımcının işareti.",
   "description.solar.flare.ticket": "(LEGACY) Solar Flare Bölümü sırasında kullanılan bir bilet",
   "description.dawn.breaker.ticket": "(LEGACY) Dawn Breaker Bölümü sırasında kullanılan bir bilet",
