--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -122,11 +122,11 @@
   "beehive.hives.plural": "염증",
   "birdieplaza.birdieIntro": "안녕하세요, 저는 세상에서 가장 아름다운 범프킨인 버디예요!",
   "birdieplaza.admiringOutfit": "내 옷차림에 감탄하는 걸 봤어.환상적이지 않나요?!?",
-  "birdieplaza.collectTickets": "{{seasonalTicket}} 를 충분히 모으면 희귀 NFT를 만들 수 있습니다.그렇게 해서 이 희귀한 의상을 얻게 됐어요!",
+  "birdieplaza.collectTickets": "{{chapterTicket}} 를 충분히 모으면 희귀 NFT를 만들 수 있습니다.그렇게 해서 이 희귀한 의상을 얻게 됐어요!",
   "birdieplaza.whatIsSeason": "시즌이란 무엇인가요?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}?",
-  "birdieplaza.earnTicketsVariety": "다양한 방법으로 {{seasonalTicket}} 를 벌 수 있습니다.",
-  "birdieplaza.gatherAndCraft": "{{seasonalTicket}} 를 충분히 모으면 저처럼 희귀 아이템을 살 수 있을 거예요.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}?",
+  "birdieplaza.earnTicketsVariety": "다양한 방법으로 {{chapterTicket}} 를 벌 수 있습니다.",
+  "birdieplaza.gatherAndCraft": "{{chapterTicket}} 를 충분히 모으면 저처럼 희귀 아이템을 살 수 있을 거예요.",
   "birdieplaza.newSeasonIntro": "선플라워 랜드에서는 3개월마다 새로운 시즌이 시작됩니다.",
   "description.speed.chicken.one": "이제 닭이 달걀을 10% 더 빨리 생산할 수 있습니다.",
   "description.banana.chicken": "바나나를 부스트하는 치킨.우리가 살고 있는 세상은 정말 대단합니다.",
@@ -1917,7 +1917,7 @@
   "harvestflower.notReady": "꽃을 수확할 준비가 되지 않았습니다",
   "harvestflower.alr.plant": "꽃은 이미 심어졌습니다",
   "hayseedHankv2.dialog1": "안녕하세요, 젊은 위퍼스내퍼들!저는 헤이시드 행크 (Hayseed Hank) 예요. 옛날처럼 땅을 가꾸는 노련한 범프킨 농부예요.",
-  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{seasonalTicket}} 로 보답하겠습니다.",
+  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{chapterTicket}} 로 보답하겠습니다.",
   "hayseedHankv2.action": "해봅시다",
   "hayseedHankv2.title": "행크의 일일 집안일",
   "hayseedHankv2.newChoresAvailable": "새로운 집안일: {{timeLeft}}",
@@ -2488,7 +2488,7 @@
   "npcDialogues.bert.intro2": "아, 킨드레드 스피릿!해바라기에는 셀 수 없이 많은 보물이 있습니다...",
   "npcDialogues.bert.intro3": "안녕하세요, 신비의 소지자!해바라기에서는 일부 품목이 배송을 요구합니다...",
   "npcDialogues.bert.intro4": "안녕하세요, 컨실드 시커!선플로레아의 마법은 두 가지로 분류할 수 있습니다...",
-  "bert.day": "{{seasonalTicket}} s를 청구한 후 3일 동안은 이 아이템을 철회할 수 없습니다.",
+  "bert.day": "{{chapterTicket}} s를 청구한 후 3일 동안은 이 아이템을 철회할 수 없습니다.",
   "npcDialogues.bert.positiveDelivery1": "놀랍습니다!필요한 건 다 가져다 주셨어요...",
   "npcDialogues.bert.positiveDelivery2": "오, 놀라운 발견!제가 찾던 물건들을 정확히 가져오셨군요...",
   "npcDialogues.bert.positiveDelivery3": "아, 시간이 됐네요!제가 찾던 바로 그 아이템을 얻으셨군요.훌륭해요!",
@@ -2710,10 +2710,10 @@
   "plaza.magicButton.query": "광장에 마법의 단추가 등장했습니다.눌러볼래?",
   "nyonStatue.memory": "를 기념하여",
   "nyonStatue.description": "광산에서 고블린을 제거하는 일을 담당한 전설의 기사.승리 후 얼마 지나지 않아 그는 고블린 공모자에게 독살당해 사망했습니다.선플라워 시티즌은 그의 정복을 기념하기 위해 그의 갑옷과 함께 이 동상을 세웠습니다.",
-  "obsessionDialogue.line1": "아, {{itemName}}!보고 싶을 뿐, 소유하고 싶지는 않아요.보여주세요. {{seasonalTicket}} s가 보상이 될 거예요.",
-  "obsessionDialogue.line2": "{{itemName}} 를 가져왔나요?그냥 보고 싶을 뿐이야.어디 보자. {{seasonalTicket}} s는 네 것이 될 거야.",
-  "obsessionDialogue.line4": "{{itemName}}!보관하고 싶진 않아요. 그냥 보기 위해서요.보여주세요. {{seasonalTicket}} s는 당신 거예요.",
-  "obsessionDialogue.line5": "{{itemName}} 의 전망을 제공합니까?제가 부탁하는 건 간단히 살펴보라는 것뿐입니다.여러분의 관대함에 따라 {{seasonalTicket}} 가 수여됩니다.",
+  "obsessionDialogue.line1": "아, {{itemName}}!보고 싶을 뿐, 소유하고 싶지는 않아요.보여주세요. {{chapterTicket}} s가 보상이 될 거예요.",
+  "obsessionDialogue.line2": "{{itemName}} 를 가져왔나요?그냥 보고 싶을 뿐이야.어디 보자. {{chapterTicket}} s는 네 것이 될 거야.",
+  "obsessionDialogue.line4": "{{itemName}}!보관하고 싶진 않아요. 그냥 보기 위해서요.보여주세요. {{chapterTicket}} s는 당신 거예요.",
+  "obsessionDialogue.line5": "{{itemName}} 의 전망을 제공합니까?제가 부탁하는 건 간단히 살펴보라는 것뿐입니다.여러분의 관대함에 따라 {{chapterTicket}} 가 수여됩니다.",
   "offer.okxOffer": "안녕하세요 파머, 독점 OKX 혜택을 준비했습니다!",
   "offer.beginWithNFT": "시작하려면 무료 팜 NFT를 발행해야 합니다.여기에는 다음이 포함됩니다.",
   "offer.getStarterPack": "지금 스타터 팩을 구매하세요",
@@ -3492,9 +3492,9 @@
   "gems.update": "젬 업데이트",
   "gems.intro": "신규 플레이어의 온보딩을 준비하기 위해 블록 벅스를 새로운 화폐인 보석으로 교체했습니다!",
   "gems.intro.two": "블록벅을 소유할 때마다 보석 20개를 받게 됩니다.",
-  "birdieplaza.commonMethod": "{{seasonalTicket}} s를 얻는 가장 일반적인 방법은 자원을 수집하거나 다른 요청 아이템을 수집하여 플라자 및 기타 지역의 범킨에게 전달하는 것입니다.",
+  "birdieplaza.commonMethod": "{{chapterTicket}} s를 얻는 가장 일반적인 방법은 자원을 수집하거나 다른 요청 아이템을 수집하여 플라자 및 기타 지역의 범킨에게 전달하는 것입니다.",
   "birdieplaza.seasonQuests": "이번 시즌에는 흥미진진한 퀘스트, 희귀 수집품, 획득할 수 있는 독점 웨어러블이 있습니다.",
-  "birdieplaza.craftItems": "이러한 희귀 아이템을 얻으려면 {{seasonalTicket}} s를 모아 스텔라의 메가스토어에서 교환하거나 경매장에서 입찰해야 합니다.",
+  "birdieplaza.craftItems": "이러한 희귀 아이템을 얻으려면 {{chapterTicket}} s를 모아 스텔라의 메가스토어에서 교환하거나 경매장에서 입찰해야 합니다.",
   "reward.streak.oneYear": "365일 연속 보상",
   "season.codex.nextDrop.available": "{{dropSupply}} 사용 가능",
   "description.hoot.boost": "+0.5 밀, 무, 케일, 쌀, 보리",
@@ -3547,7 +3547,7 @@
   "description.chicken": "신선한 계란과 부드러운 깃털이 믿을 수 있는 공급원인 이 닭고기는 올바른 관리만 하면 기꺼이 제 역할을 해냅니다.",
   "description.cow": "이 부드러운 젖소는 신선한 우유와 튼튼한 가죽을 제공합니다.푸짐한 음식과 애정으로 행복한 시간을 보내세요.",
   "description.sheep": "이 푹신한 양은 일반 울과 고급스러운 메리노 울을 모두 제공합니다.아주 부드러운 결과를 위해 계속 사용하세요!",
-  "obsessionDialogue.line3": "이게 당신이 가지고 있는 {{itemName}} 인가요?내가 원하는 건 그저 한 번 보는 것뿐이야.이를 위해 {{seasonalTicket}} 를 받게 됩니다.",
+  "obsessionDialogue.line3": "이게 당신이 가지고 있는 {{itemName}} 인가요?내가 원하는 건 그저 한 번 보는 것뿐이야.이를 위해 {{chapterTicket}} 를 받게 됩니다.",
   "competition.maybeLater": "아마 나중에",
   "world.lvl.requirement": "레벨 {{lvl}}",
   "world.factionMembersOnly": "팩션 멤버 전용",
@@ -3591,7 +3591,7 @@
   "flower.breed.yellowCarnation": "범프킨은 노란 카네이션을 소중히 여기지 않아요.",
   "noBumpkin.bumpkinHelp": "땅을 심고, 수확하고, 자르고, 채굴하고, 확장하는 데 도움이 되는 범프킨이 필요합니다.범프킨 추가 지원이 곧 제공될 예정입니다!",
   "chores.weeklyChores": "주간 집안일",
-  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{seasonalTicket}} 를 벌세요.",
+  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{chapterTicket}} 를 벌세요.",
   "chores.lockedChore": "레벨 {{level}}",
   "chores.completed": "완료됨",
   "chores.complete": "완료",
@@ -3805,7 +3805,7 @@
   "description.brush": "애니멀 브러쉬.이 제품을 사용해 동물에게 애정을 표현하세요.",
   "description.music.box": "동물에게 음악을 재생합니다.이를 사용해 동물에게 애정을 표현하세요.",
   "levelUpMax": "최대 레벨!",
-  "birdieplaza.choresAndRewards": "또한 주간 집안일, 일일 상자 보상, 버트의 이상한 집착, 현상금 시스템을 통해서도 {{seasonalTicket}} 를 얻을 수 있습니다!",
+  "birdieplaza.choresAndRewards": "또한 주간 집안일, 일일 상자 보상, 버트의 이상한 집착, 현상금 시스템을 통해서도 {{chapterTicket}} 를 얻을 수 있습니다!",
   "description.community.coin": "(WIP) 선플라워 랜드에서 나중에 사용할 수 있도록 예약되어 있는 가치 있는 주화입니다.",
   "bedsMigration.bedsNeededDescription2": "각각의 독특한 침대는 농장에서 한 손도 잘 수 있습니다.",
   "bedsMigration.bedsNeededDescription3": "더 많은 농부를 고용하려면 침대를 배치하세요!",
@@ -3940,7 +3940,7 @@
   "marketplace.itemSold": "아이템 판매",
   "marketplace.congratulationsItemSold": "축하합니다. 상품이 판매되었습니다!",
   "withdraw.taxFree": "고블린은 게임 내에서 획득한 SFL에 세금을 부과합니다.예금 및 마켓플레이스는 제외됩니다.",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} 의 금액은 요청에 따라 매주 달라집니다.",
+  "bounties.board.ticketAmount": "{{chapterTicket}} 의 금액은 요청에 따라 매주 달라집니다.",
   "marketplace.listing.cancelling": "리스팅 취소",
   "marketplace.listing.cancelling.success": "축하합니다. 리스팅이 성공적으로 취소되었습니다!",
   "marketplace.listing.cancelling.failure": "죄송합니다. 문제가 발생했습니다.다시 시도해 주세요.",
@@ -3990,7 +3990,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} 일일 구매 잔량",
   "remaining.free.purchase": "하루 구매 수량 1개 남음",
   "statements.potionRule.four": "게임이 완료되면 마지막 시도의 점수에 따라 보상이 결정됩니다.",
-  "obsessionDialogue.codex": "이게 당신이 가지고 있는 {{itemName}} 인가요?광장으로 가서 버트를 찾아 보여 주면 그 대가로 {{seasonalTicket}} 를 줄 거예요.",
+  "obsessionDialogue.codex": "이게 당신이 가지고 있는 {{itemName}} 인가요?광장으로 가서 버트를 찾아 보여 주면 그 대가로 {{chapterTicket}} 를 줄 거예요.",
   "bounties.board.travel": "광장으로 가서 Poppy를 찾아 이러한 현상금을 달성하세요.",
   "description.trade.points": "마켓플레이스에서 수집품과 웨어러블을 거래하여 수익을 올렸습니다.게임 내 보상으로 교환할 수 있습니다.",
   "reward.collectible": "농장을 위한 수집품",
@@ -4788,7 +4788,7 @@
   "temperateSeason.possibleEventsDescription": "광장에 있는 웨더 샵을 방문하여 농장을 보호하세요!",
   "beds": "침대",
   "weatherItems": "날씨 아이템",
-  "birdieplaza.currentSeason": "현재 {{currentSeason}} 챕터에 속해 있는데 범프킨은 {{seasonalTicket}} s에 열광하고 있습니다.",
+  "birdieplaza.currentSeason": "현재 {{currentSeason}} 챕터에 속해 있는데 범프킨은 {{chapterTicket}} s에 열광하고 있습니다.",
   "description.catch.the.kraken.banner": "크라켄이 왔어요!크라켄 캐치 챕터 참가자 마크.",
   "description.solar.flare.ticket": "(레거시) 솔라 플레어 챕터에서 사용한 티켓",
   "description.dawn.breaker.ticket": "(레거시) 던 브레이커 챕터에서 사용한 티켓",
